--- a/Dodoplier/app/src/main/AndroidManifest.xml
+++ b/Dodoplier/app/src/main/AndroidManifest.xml
@@ -9,10 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".profile"></activity>
-        <activity android:name=".organization_info" />
-        <activity android:name=".explore_organizations" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".Profile"></activity>
+        <activity android:name=".OrganizationInfo" />
+        <activity android:name=".ExploreOrganizations" />
+        <activity android:name=".ExploreCauses">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
